// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonEx UnitTest renders correctly 1`] = `
<ForwardRef(Themed.Button)
  buttonStyle={
    Object {
      "backgroundColor": "#d90d19",
      "borderColor": "#f33f4a",
      "borderRadius": 5,
      "borderWidth": 0,
    }
  }
  containerStyle={
    Object {
      "marginTop": 20,
      "width": "90%",
    }
  }
  localizedTitle="save"
  title="保存する。"
  titleStyle={
    Object {
      "fontWeight": "700",
    }
  }
/>
`;

exports[`ButtonEx UnitTest renders correctly 2`] = `
<ForwardRef(Themed.Button)
  buttonStyle={
    Object {
      "backgroundColor": "#d90d19",
      "borderColor": "#f33f4a",
      "borderRadius": 5,
      "borderWidth": 0,
    }
  }
  containerStyle={
    Object {
      "marginTop": 20,
      "width": "90%",
    }
  }
  localizedTitle="save"
  title="Save"
  titleStyle={
    Object {
      "fontWeight": "700",
    }
  }
/>
`;
